# test-task2024

./: .gitignore  CMakeLists.txt  main.cpp
include/curves/: curves.h
